<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_SkillReferenz" Id="{49177925-01bb-437e-a9bc-56984c504ca6}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_SkillReferenz EXTENDS FB_Basis_Skill IMPLEMENTS I_Skill 
VAR_INPUT
	// Zu verwendetes Objekt
	Objekt						:I_Objekt_Roboter;	
	
	// Prozessrelevante Inputs
	sMessdaten					:Kraftvariablen; 
END_VAR
VAR_OUTPUT
	iErrorID					:INT;									// Fehlercode für System
END_VAR
VAR
	// Prozessvariablen
	eProzessvariable 	:sRoboterProzessVariablen;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Fehlerüberwachung
IF bFehler THEN
	iState := 3;
END_IF

//_______________________________________________________________
// Interner Steuerungsmethodenaufruf:
	// Stoppen
	IF eSysCommand = 3 THEN
		bStoppen := M_Stop();
	ELSE 
		bStoppen := FALSE;
	END_IF

	// Resetten 
	IF eSysCommand = 4 THEN
		bResetten := M_Reset();
	ELSE
		bResetten := FALSE;
	END_IF
	
	// Limit
	IF bLimit THEN
		bLimitErreicht := M_Stop();
	ELSE
		bLimitErreicht := FALSE;
	END_IF
	
	// Erreicht
	IF bErreicht THEN
		bWertErreicht := M_Stop();
	ELSE
		bWertErreicht := FALSE;
	END_IF
//_______________________________________________________________
// Zustandsmanagement
CASE iState OF 
0: 	// BEREIT	
		// DO
		IF Objekt.P_State = 3 THEN		// Objekt wurde eingeschalten
			bStarten := TRUE;
		END_IF
		
		// TRANSITION
		IF bStarten	 THEN		
			bStarten := FALSE;
			iState := 1;	
		END_IF
		
		
// _________________________________________________________________________________________________________________________
1: 	// LAUFEND
		// DO			
			// Stoppen durch Sysezm
			IF bStoppen THEN																								// Transition wenn System das Orbjekt stoppt
				bGestoppt := TRUE;
			END_IF
			
			// Objekt hat sich selber gestoppt
			IF Objekt.P_State = 4 THEN																							// Objekt hat Prozess abgeschlossen
				bObjektFertig := TRUE;																							// Objekt ist fertig und wieder bereit
			END_IF
			
		// TRANSITION 
		IF bGestoppt THEN																								// Transition zu BEREIT
			bGestoppt := FALSE;																						
			iState := 0;
		END_IF
		
		IF bObjektFertig THEN																							// Transition zu ABGESCHLOSSEN
			bObjektFertig := FALSE;																							// Skill wird nicht mehr ausgeführt
			iState := 2;																									// Objekt ist fertig und wieder bereit
		END_IF
		
		IF bLimitErreicht AND Objekt.P_State = 5 THEN																							// Transition zu LIMIT
			iState := 4;
		END_IF
		
		IF bWertErreicht AND Objekt.P_State = 5 THEN																							// Transition zu ERREICHT	
			iState := 5;
		END_IF
			
// _________________________________________________________________________________________________________________________			
2: 	// ABGESCHLOSSEN
		// DO
		IF Objekt.P_State = 1 THEN																							// Objekt wurde geresettet
			bSkillFertig := TRUE;									
		END_IF
			
		//  TRANSITION
		IF bSkillFertig THEN
			bSkillFertig := FALSE;																																											// Resetten von Objekt
			iState := 0;
		END_IF
		
// _________________________________________________________________________________________________________________________
3: 	// FEHLER
		// DO 	
		
		// TRANSITION
		IF bResetten THEN
			iState := 0;
		END_IF
		
// _________________________________________________________________________________________________________________________			
4: 	// LIMIT
		// DO		
		M_Reset();
		
		IF Objekt.P_State = 1 THEN																								// Objekt wurde geresettet
			bResetten := TRUE;								
		END_IF
	
		// TRANSITION
		IF bResetten THEN
			bResetten := FALSE;
			iState := 0;
		END_IF
			
// _________________________________________________________________________________________________________________________
5: 	// ERREICHT		
		// DO 
		M_Reset();
		
		IF Objekt.P_State = 1 THEN																							// Objekt wurde geresettet
			bSkillFertig := TRUE;									
		END_IF
		
		// TRANSITION
		IF bSkillFertig THEN
			bSkillFertig := FALSE;
			iState := 0;
		END_IF
		
END_CASE]]></ST>
    </Implementation>
    <Folder Name="01_Steuerungsmethoden" Id="{25f1923f-5ff7-4491-877a-9805ee9e60d5}" />
    <Folder Name="02_Steuerungseigenschaften" Id="{e5d2e899-3eae-4199-8033-03400cea0335}" />
    <Method Name="M_Reset" Id="{ef2062a0-04ed-4e7f-a607-9c2af05351fc}" FolderPath="01_Steuerungsmethoden\">
      <Declaration><![CDATA[METHOD M_Reset : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[Objekt.M_Reset();]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Start" Id="{480eb7f8-a1c4-40c0-9540-cd0584b6d836}" FolderPath="01_Steuerungsmethoden\">
      <Declaration><![CDATA[METHOD M_Start : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Prüfen von Bedingungen
	// Ist das  System im korrekten Status
	IF eSysState = 1 THEN
		// Ist der Skill im korrekten Status 
		IF iState = 0 THEN
			// Prüfen auf Fehler (Muss ergänzt werden)
				Objekt.P_Prozessparameter := eProzessvariable;
				Objekt.M_Start();
		END_IF
	END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Stop" Id="{b71bd835-b3bb-4a72-a491-e6b8b3bf5195}" FolderPath="01_Steuerungsmethoden\">
      <Declaration><![CDATA[METHOD M_Stop : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[Objekt.M_Stop();]]></ST>
      </Implementation>
    </Method>
    <Property Name="P_State" Id="{1f96171f-1f3c-44fa-a62d-5a6b95dd9cd5}" FolderPath="02_Steuerungseigenschaften\">
      <Declaration><![CDATA[PROPERTY P_State : eSkillState]]></Declaration>
      <Get Name="Get" Id="{9573abb8-6a0a-46e3-8b8a-d8b49d1a7f61}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_State := iState; ]]></ST>
        </Implementation>
      </Get>
    </Property>
  </POU>
</TcPlcObject>